2002-02-19  Benjamin Kosnik  <bkoz@redhat.com>
	
	* config/linker-map.gnu: Export global vtable, typeinfo, guard
	variable, and thunk info as per CXXABI docs.

2002-02-19  Loren Rittle <ljrittle@acm.org>

	* include/Makefile.am: Use CONFIG_HEADER instead of ad hoc names.
	* include/Makefile.in: Rebuilt.

2002-02-18  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

	* testsuite/22_locale/collate_byname.cc (test01): Replace size4
          with size3 for the string collations of str5.

2002-02-18  Paolo Carlini  <pcarlini@unitus.it>

	libstdc++/5708
	* include/bits/locale_facets.tcc (money_put::do_put):
	For the space field use __fill instead of ' ', uniformly.
	* testsuite/22_locale/money_put_members_char.cc:
	Add test05 distilled from PR.
	(test01-02-03): Trim some '*' to ' '.
	* testsuite/22_locale/money_put_members_wchar_t.cc: Ditto.

2002-02-18  Loren Rittle <ljrittle@acm.org>

	libstdc++/5697
	* include/Makefile.am (thread_builddir): Remove (map all
	existing uses to target_builddir).
	(thread_headers): Rename to...
	(thread_target_headers): ...this.
	(stamp-thread): Remove.
	(stamp-target): Correctly state the position as built.
	Update all dependencies to match the new reality.  Remove all
	dependency calculations on directories.
	* include/Makefile.in: Rebuilt.

2002-02-16   Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.tcc: Add pragma GCC system_header.	
	* include/bits/fstream.tcc: Same.
	* include/bits/sstream.tcc: Same.
	* include/bits/ostream.tcc: Same.
	* include/bits/istream.tcc: Same.
	* include/bits/streambuf.tcc: Same.
	* include/bits/basic_ios.tcc: Same.
	* include/bits/basic_string.tcc: Same.

2002-02-15  Benjamin Kosnik  <bkoz@redhat.com>

	* include/std/std_iosfwd.h: Don't guard typedefs with
	_GLIBCPP_USE_WCHAR_T
	* include/bits/stringfwd.h: Same.

2002-02-15  Benjamin Kosnik  <bkoz@redhat.com>

	* src/locale.cc (moneypunct_byname): Remove definitions.
	* include/std/std_streambuf.h (streambuf::operator=): Return.
	