@@ -352,13 +352,13 @@ struct My_money_io : public std::moneypunct<char,false>
 
   pattern do_pos_format() const
   {
-    static pattern pat = { { symbol, none, sign, value } };
+    pattern pat = { { symbol, none, sign, value } };
     return pat;
   }
 
   pattern do_neg_format() const
   {
-    static pattern pat = { { symbol, none, sign, value } };
+    pattern pat = { { symbol, none, sign, value } };
     return pat;
   }
 };
@@ -368,6 +368,8 @@ void test05()
 {
   using namespace std;
   typedef istreambuf_iterator<char> InIt;
+
+  bool test = true;
 
   locale loc(locale::classic(), new My_money_io);
 
@@ -416,6 +418,7 @@ void test05()
 void test06()
 {
   using namespace std;
+  bool test = true;
 
   typedef istreambuf_iterator<char> InIt;
   InIt iend1, iend2, iend3;
@@ -461,7 +464,7 @@ struct My_money_io_a : public std::moneypunct<char,false>
 
   pattern do_pos_format() const
   {
-    static pattern pat = { { sign, value, space, symbol } };
+    pattern pat = { { sign, value, space, symbol } };
     return pat;
   }
 };
@@ -478,7 +481,7 @@ struct My_money_io_b : public std::moneypunct<char,false>
 
   pattern do_pos_format() const
   {
-    static pattern pat = { { sign, value, symbol, none } };
+    pattern pat = { { sign, value, symbol, none } };
     return pat;
   }
 };
@@ -493,6 +496,7 @@ void test07()
   typedef istreambuf_iterator<char> InIt;
 
   bool intl = false;
+  bool test = true;
   ios_base::iostate err;
 
   locale loc_a(locale::classic(), new My_money_io_a);
